test(suggester): suggester components tests